# threatintel-platform

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile
docs/: deployment.md  digest.md  dns.md
src/darkweb_scanner/: __init__.py  alerting.py  channel_monitor.py  digest.py  dns_crawler.py  feeds.py  main.py  paste_monitor.py  quick_scan.py  quick_scan_sources.py  ransomware_live.py  storage.py  tor_client.py
src/darkweb_scanner/dashboard/: app.py  auth_routes.py  channel_monitor_routes.py  dashboard_routes.py  http_client.py  storage_helper.py
src/darkweb_scanner/dashboard/templates/: index.html  quick_scan.html
tests/integration/: test_dns_crawler_ssrf.py  test_error_disclosure.py  test_proxy_routes_safety.py  test_quick_scan_orchestration.py  test_quick_scan_routes.py  test_ransomware_groups_perf.py  test_session_lifecycle.py  test_threat_actors_perf.py
tests/unit/: test_alerting.py  test_auth_routes.py  test_http_client.py  test_main.py  test_quick_scan_high_signal.py  test_quick_scan_target_detection.py
