[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkweb-scanner"
version = "1.1.0"
description = "Keyword monitoring tool for .onion sites — for legitimate security research and threat intelligence"
readme = "README.md"
# Updated license field
license = { text = "GNU Affero General Public License v3.0" }
requires-python = ">=3.11"
keywords = ["tor", "dark-web", "threat-intelligence", "osint", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    # Updated license classifier
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "stem>=1.8",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "flask>=3.0",
    "gunicorn>=21.0",
    "bcrypt>=4.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "pillow>=10.0",
    "requests>=2.31",
    "telethon>=1.36",
    "reportlab>=4.0",
    "deep-translator>=1.11",
    "langdetect>=1.0",
    "psycopg2-binary>=2.9",
    "dnspython>=2.4",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "playwright>=1.40",
]
dev = [
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "bandit>=1.7",
    "types-PyYAML",
    "types-beautifulsoup4",
]
all = [
    "bcrypt>=4.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "pillow>=10.0",
    "requests>=2.31",
    "telethon>=1.36",
    "reportlab>=4.0",
    "deep-translator>=1.11",
    "langdetect>=1.0",
    "psycopg2-binary>=2.9",
    "dnspython>=2.4",
    "feedparser>=6.0",
    "flask>=3.0",
    "gunicorn>=21.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "playwright>=1.40",
]

[project.scripts]
darkweb-scanner = "darkweb_scanner.main:main"

[project.urls]
Homepage = "https://github.com/osintph/darkweb-scanner"
Repository = "https://github.com/osintph/darkweb-scanner"
Issues = "https://github.com/osintph/darkweb-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linting) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ── Mypy (type checking) ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
